// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SatelliteSelectionDropdownItem renders correctly 1`] = `
<button name="Choose name satellite" type="button" class="satellite-choice">
  <!---->
  <!---->
  <p class="satellite-choice__name with-id-button">
    name
  </p>
  <div class="satellite-choice__right-area"><button name="Show Satellite ID" type="button" class="satellite-choice__right-area__button"><svg></svg>
      <p class="satellite-choice__right-area__button__text">ID</p>
    </button></div>
</button>
`;

exports[`SatelliteSelectionDropdownItem renders correctly if disqualified 1`] = `
<button name="Choose name satellite" type="button" class="satellite-choice"><svg alt="disqualified image" class="satellite-choice__image"></svg>
  <!---->
  <p class="satellite-choice__name disqualified with-id-button">
    name
  </p>
  <div class="satellite-choice__right-area"><button name="Show Satellite ID" type="button" class="satellite-choice__right-area__button"><svg></svg>
      <p class="satellite-choice__right-area__button__text">ID</p>
    </button></div>
</button>
`;

exports[`SatelliteSelectionDropdownItem renders correctly if suspended 1`] = `
<button name="Choose name satellite" type="button" class="satellite-choice">
  <!----> <svg alt="suspended image" class="satellite-choice__image"></svg>
  <p class="satellite-choice__name suspended with-id-button">
    name
  </p>
  <div class="satellite-choice__right-area"><button name="Show Satellite ID" type="button" class="satellite-choice__right-area__button"><svg></svg>
      <p class="satellite-choice__right-area__button__text">ID</p>
    </button></div>
</button>
`;
